--- a/src/index.css
+++ b/src/index.css
@@ -1,81 +1,111 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif !important;
+  word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 :root,
-[data-bs-theme=light] {
+[data-erp-theme="light"] {
   /* Background color */
-  --bs-primary-color: #4676a0;
-  --bs-secondary-color: #eb6329;
-  --bs-white-color: #fff;
-  --bs-sky-500: #405189;
-  --bs-sky-300: #7dd3fc;
-  --bs-yellow-color: #d19b3d;
-  --bs-lightblack-color: #2e353d;
+  --erp-primary-color: #4676a0;
+  --erp-secondary-color: #eb6329;
+  --erp-white-color: #fff;
+  --erp-sky-500: #405189;
+  --erp-sky-300: #7dd3fc;
+  --erp-yellow-color: #d19b3d;
+  --erp-lightblack-color: #2e353d;
+  --erp--text-mute: #878a99;
 
   /* Text Color */
-  --bs-text-grey-color: #abb9e8;
-  --bs-text-white-color: #fff;
-  --text-color: #000;
+  --erp-text-grey-color: #abb9e8;
+  --erp-text-white-color: #fff;
+  --erp-text-color: #000;
 
   /* font-size */
-  --bs-font-size-xs: 12px;
-  --bs-font-size-s: 0.813rem;
-  --bs-font-size-m: 0.9375rem;
-  --bs-font-size-l: 18px;
-  --bs-font-size-xl: 20px;
+  --erp-font-size-xs: 12px;
+  --erp-font-size-s: 0.8125rem;
+  --erp-font-size-m: 0.9375rem;
+  --erp-font-size-l: 18px;
+  --erp-font-size-xl: 20px;
 
   /* font-weight */
-  --bs-font-weight-thin: 100;
-  --bs-font-weight-light: 300;
-  --bs-font-weight-regular: 400;
-  --bs-font-weight-medium: 500;
-  --bs-font-weight-bold: 700;
+  --erp-font-weight-thin: 100;
+  --erp-font-weight-light: 300;
+  --erp-font-weight-regular: 400;
+  --erp-font-weight-medium: 500;
+  --erp-font-weight-bold: 700;
 
   /* line-height */
-  --bs-font-xs-light-lh: 12px 300 1.2; /* Extra Small, Light, Line Height 1.2 */
-  --bs-font-s-regular-lh: 14px 400 1.5; /* Small, Regular, Line Height 1.5 */
-  --bs-font-m-medium-lh: 16px 500 1.6; /* Medium, Medium, Line Height 1.6 */
-  --bs-font-l-bold-lh: 18px 700 1.8; /* Large, Bold, Line Height 1.8 */
-  --bs-font-xl-bold-lh: 20px 700 2; /* Extra Large, Bold, Line Height 2.0 */
+  --erp-font-xs-light-lh: 12px 300 1.2; /* Extra Small, Light, Line Height 1.2 */
+  --erp-font-s-regular-lh: 14px 400 1.5; /* Small, Regular, Line Height 1.5 */
+  --erp-font-m-medium-lh: 16px 500 1.6; /* Medium, Medium, Line Height 1.6 */
+  --erp-font-l-bold-lh: 18px 700 1.8; /* Large, Bold, Line Height 1.8 */
+  --erp-font-xl-bold-lh: 20px 700 2; /* Extra Large, Bold, Line Height 2.0 */
 }
 
 /* Dark mode colors */
 .darkMode,
-[data-bs-theme=dark] 
-{
+[data-erp-theme="dark"] {
   color-scheme: dark;
-  --bs-white-color: #000;
-  --bs-text-grey-color: #abb9e8;
-  --bs-text-white-color: #fff;
-  --bs-sky-500: #13161d;
-  --bs-sky-300: #7dd3fc;
+  --erp-white-color: #000;
+  --erp-text-grey-color: #abb9e8;
+  --erp-text-white-color: #fff;
+  --erp-sky-500: #13161d;
+  --erp-sky-300: #7dd3fc;
   --text-color: #fff;
 }
 
 .wrap {
-  background-color: var(--bs-white-color);
+  background-color: var(--erp-white-color);
   width: 100vw;
   height: 100vh;
 }
 
-.font-size-m{
-  font-size: var(--bs-font-size-m);
+.font-size-sm {
+  font-size: var(--erp-font-size-s);
 }
-.font-weight-400{
-  font-weight: var(--bs-font-weight-regular);
+.font-size-m {
+  font-size: var(--erp-font-size-m);
+}
+.font-size-lg {
+  font-size: var(--erp-font-size-l);
+}
+.font-size-xl {
+  font-size: var(--erp-font-size-xl);
 }
 
+.font-weight-100 {
+  font-weight: var(--erp-font-weight-thin);
+}
+.font-weight-300 {
+  font-weight: var(--erp-font-weight-light);
+}
+.font-weight-400 {
+  font-weight: var(--erp-font-weight-regular);
+}
+.font-weight-500 {
+  font-weight: var(--erp-font-weight-medium);
+}
+.font-weight-700 {
+  font-weight: var(--erp-font-weight-bold);
+}
 .main_menu i {
-    display: inline-block;
-    min-width: 1.75rem;
-    font-size: 18px;
-    line-height: inherit;
+  display: inline-block;
+  min-width: 1.75rem;
+  font-size: 18px;
+  line-height: inherit;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.text-mute {
+  color: var(--erp--text-mute) !important;
 }
