--- a/src/assets/css/common/Login.css
+++ b/src/assets/css/common/Login.css
@@ -76,3 +76,8 @@
   color: #d29c40;
   font-weight: 500;
 }
+
+.custom-password-length-text {
+  color: #878a99 !important;
+  font-size: 0.775rem !important;
+}
