--- a/src/assets/css/common/Login.css
+++ b/src/assets/css/common/Login.css
@@ -8,18 +8,18 @@
   height: 100%;
 }
 .form-control:focus {
-  border: 1px solid #b3b9d0 !important;
+  border: 1px solid var(--erp-sky-100) !important;
 }
 
 .login_welcome_text {
-  color: rgb(64, 81, 137);
-  font-size: 16.25px;
-  font-weight: 500;
+  color: var(--erp-sky-500);
+  font-size: var(--erp-fs-16);
+  font-weight: var(--erp-font-weight-medium);
 }
 
 .login_welcome_description {
-  color: #878a99 !important ;
-  font-size: 13px;
+  color: var(--erp-sky-200) !important ;
+  font-size: var(--erp-fs-13);
 }
 
 .signin-other-title {
@@ -72,17 +72,17 @@
 }
 
 .error-text {
-  font-size: 13px;
+  font-size: var(--erp-fs-13);
 }
 
 .reset-password-message {
-  font-size: 13px;
-  color: #d29c40;
-  font-weight: 500;
+  font-size: var(--erp-fs-13);
+  color: var(--erp-yellow-color);
+  font-weight: var(--erp-font-weight-medium);
 }
 
 .custom-password-length-text {
-  color: #878a99 !important;
+  color: var(--erp-sky-200) !important;
   font-size: 0.775rem !important;
 }
 
@@ -93,6 +93,6 @@
 /* Lockscreen */
 .lock-screen-username {
   color: #495057;
-  font-size: 1rem !important;
-  font-weight: 500;
+  font-size: var(--erp-fs-16) !important;
+  font-weight: var(--erp-font-weight-medium);
 }
