some ui changes

--- a/src/assets/css/common/Forms.css
+++ b/src/assets/css/common/Forms.css
@@ -1,18 +1,57 @@
-body{
+body {
     background-color: #f3f3f9;
     font-family: "Poppins", sans-serif;
 }
-.fsize{
+
+.fsize {
     font-size: 0.8125rem;
     font-weight: 500;
 }
 
 .dropdown-menu {
-    max-height: 200px; 
+    max-height: 200px;
     overflow-y: auto;
-    scrollbar-width: thin; 
+    scrollbar-width: thin;
 }
 
-  .select-scrl{
-    scrollbar-width: thin; 
-  }
+.select-scrl {
+    scrollbar-width: thin;
+}
+
+.nav-link.active {
+    border-bottom: 2px solid #0ab39c;
+    color: #0ab39c
+}
+
+.btn-soft-primary:hover {
+    color: white;
+    background-color: #405189;
+}
+
+.btn-soft-primary {
+    color: #405189;
+    background-color: #e2e5ed;
+}
+
+/* .acc-plus::after {
+    display: none;
+} */
+
+
+.date-pic {
+    width: 300px !important;
+}
+
+.react-datepicker__header {
+    background-color: #405189;
+}
+
+.react-datepicker__current-month {
+    color: white;
+}
+
+.react-datepicker__day-name {
+    color: white;
+}
+
+/* page*/
