--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,19 @@ body {
   /* color #4676a0*/
   --erp-primary-color: #3a4876;
   --erp-secondary-color: #eb6329;
+  --erp-orange-500: #f06548;
+  --erp-orange-600: #da3412;
   --erp-light-blue-color: #abb9e8;
   --erp-gray-color: #878a99;
   --erp-white-color: #fff;
   --erp-sky-500: #405189;
   --erp-sky-300: #7dd3fc;
+  --erp-sky-400: #2385ba;
   --erp-yellow-color: #d19b3d;
   --erp-lightblack-color: #2e353d;
   --erp-text-mute: #878a99;
-
+  --erp-green-400: #0ab39c;
+  --erp-gray-200: #e2e5ed;
 
   /* font-size */
   --erp-font-size-xs: 12px;
@@ -32,6 +36,8 @@ body {
   --erp-font-size-l: 1.25rem;
   --erp-font-size-24: 24px;
 
+  --erp-font-size-22: 22px;
+  --erp-font-size-14: 14px;
   --erp-fs-16: 1rem;
   --erp-fs-13: 13px;
 
@@ -40,6 +46,7 @@ body {
   --erp-font-weight-light: 300;
   --erp-font-weight-regular: 400;
   --erp-font-weight-medium: 500;
+  --erp-font-weight-lightbold: 600;
   --erp-font-weight-bold: 700;
 
   /* line-height */
@@ -53,6 +60,7 @@ body {
   /* Large, Bold, Line Height 1.8 */
   --erp-font-xl-bold-lh: 20px 700 2;
   /* Extra Large, Bold, Line Height 2.0 */
+
 }
 
 /* Dark mode colors */
@@ -140,14 +148,14 @@ a {
   width: 100%;
 }
 
-.form-control:focus {
+/* .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
   border-color: #86b7fe;
   outline: 0;
   font-size: var(--erp-font-size-s) !important;
   box-shadow: none !important;
-}
+}  */
 
 /* -------sidemenu css */
 ::after,
@@ -282,6 +290,7 @@ a.sidebar-link:hover {
   min-width: 15rem;
   display: none;
 }
+
 /* #sidebar:not(.expand) .sidebar-link:hover .has-dropdown + .sidebar-dropdown {
   display: block;
   max-height: 15em;
@@ -298,7 +307,7 @@ a.sidebar-link:hover {
   display: none;
 }
 
-#sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
+#sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
   display: block;
   max-height: 18em;
   width: 100%;
