siebar changes done by lakshmi

--- a/src/assets/css/common/Forms.css
+++ b/src/assets/css/common/Forms.css
@@ -1,7 +1,7 @@
-body {
+/* body {
     background-color: #f3f3f9;
     font-family: "Poppins", sans-serif;
-}
+} */
 
 .fsize {
     font-size: 0.8125rem;
