--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   --erp-yellow-color: #d19b3d;
   --erp-lightblack-color: #2e353d;
   --erp--text-mute: #878a99;
+  --erp-blue-color: #405189;
 
   /* Text Color */
   --erp-text-grey-color: #abb9e8;
