--- a/src/assets/css/common/Login.css
+++ b/src/assets/css/common/Login.css
@@ -27,7 +27,7 @@
 }
 
 .signin-other-title .title {
-  background-color: #fff;
+  background-color: var(--erp-white-color);
   display: inline-block;
   padding: 2px 16px;
   position: relative;
@@ -35,7 +35,7 @@
 }
 
 .signin-other-title::after {
-  border-top: 1px dashed #e9ebec;
+  border-top: 1px dashed var(--erp-white-200);
   content: "";
   height: 1px;
   left: 0;
@@ -66,7 +66,7 @@
 }
 
 .card {
-  box-shadow: 0 1px 2px #38414a26;
+  box-shadow: 0 1px 2px var(--erp-black-300);
   /* margin-bottom: 1.5rem; */
   border-radius: 4px !important;
 }
@@ -83,7 +83,7 @@
 
 .custom-password-length-text {
   color: var(--erp-sky-200) !important;
-  font-size: 0.775rem !important;
+  font-size: var(--erp-fs-7) !important;
 }
 
 .custom-href > a {
@@ -92,7 +92,7 @@
 
 /* Lockscreen */
 .lock-screen-username {
-  color: #495057;
+  color: var(--erp-black-300);
   font-size: var(--erp-fs-16) !important;
   font-weight: var(--erp-font-weight-medium);
 }
