--- a/src/assets/css/common/Topbar.css
+++ b/src/assets/css/common/Topbar.css
@@ -5,7 +5,7 @@
   position: fixed;
   right: 0px;
   top: 0px;
-  background-color: #fff;
+  background-color: var(--erp-navbar-color);
 }
 
 .navbar-header-max {
@@ -49,18 +49,20 @@
   line-height: inherit;
   min-width: 1.75rem;
   margin-right: 10px;
-  color: var(--erp-text-gray-color);
+  color: var(--erp-gray-500);
   font-weight: var(--bs-font-weight-regular);
+  cursor: pointer;
 }
 
 .navbar_username {
   font-size: 0.9rem;
   font-weight: var(--bs-font-weight-medium);
+  color: var(--erp-text-color);
 }
 
 .navbar_userrole {
-  font-size: var(--bs-fs-xs);
-  color: #495057;
+  font-size: var(--erp-fs-xs);
+  color: var(--erp-gray-400);
   letter-spacing: 1px;
 }
 
@@ -81,7 +83,7 @@
   width: 150px;
   border-radius: 4px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  background-color: white;
+  background-color: var(--erp-gray-100);
   margin-top: 10px;
   padding: 0 10px 0 10px;
   opacity: 0;
