--- a/src/assets/css/common/Forms.css
+++ b/src/assets/css/common/Forms.css
@@ -1,32 +1,38 @@
-
-
-.fsize {
+.fs-s {
     font-size: var(--erp-fs-s);
     font-weight: var(--erp-font-weight-medium);
 }
+
 .dropone-border {
     min-height: 230px;
-    border: 2px  #e9ebec dashed;
+    border: 2px #e9ebec dashed;
     background: #fff;
     border-radius: 6px;
 }
-.filepond{
-  
+
+.filepond {
+
     border: 2px dashed #e9ebec;
     background: #fff;
     border-radius: 6px;
 }
+
 .filepond-profile-picture {
     border: 2px dashed #e9ebec;
     background: #fff;
     border-radius: 50%;
 }
 
-.img-box-fsize {
+.img-box-fs-12 {
     font-size: 14px;
 }
-.form-fsize{
+
+
+.form-fs-12 {
     font-size: 14px;
+}
+.fs-16{
+    font-size: var(--erp-fs-16);
 }
 
 .dropdown-menu {
@@ -39,21 +45,41 @@
     scrollbar-width: thin;
 }
 
-
-.btn-soft-primary:hover {
-    color: var(--erp-white-color);
-    background-color: var(--erp-sky-500);
+.btn_primary {
+    background-color: var(--erp-primary-color) !important;
+    border-color: var(--erp-primary-color) !important;
+    color: var(--erp-white-color)
 }
 
-.btn-soft-primary {
-    color: var(--erp-sky-500);
-    background-color: var(--erp-gray-200);
+.btn_success {
+    background-color: var(--erp-success-color) !important;
+    border-color: var(--erp-success-color) !important;
+    color: var(--erp-white-color)
 }
+
+
 
 /* .acc-plus::after {
     display: none;
 } */
 
+.primary_outline {
+    border-color: var(--erp-primary-color);
+}
+
+.primary_outline:hover {
+    background-color: var(--erp-primary-color);
+    color: var(--erp-white-color)
+}
+
+.success_outline {
+    border-color: var(--erp-success-color);
+}
+
+.success_outline:hover {
+    background-color: var(--erp-success-color);
+    color: var(--erp-white-color)
+}
 
 .date-pic {
     width: 300px !important;
@@ -69,6 +95,10 @@
 
 .react-datepicker__day-name {
     color: var(--erp-white-color);
+}
+
+.bg_white {
+    background-color: var(--erp-bg-white);
 }
 
 /* page*/
