--- a/src/assets/css/common/Button.css
+++ b/src/assets/css/common/Button.css
@@ -1,20 +1,20 @@
-.btn-primary {
+.btn_primary {
     background-color: var(--erp-sky-500);
     border: var(--erp-sky-500);
 }
 
-.btn-outline-primary {
+.btn_outline_primary {
     color: var(--erp-sky-500);
     border-color: var(--erp-sky-500);
 }
 
-.btn-outline-primary:hover {
+.btn_outline_primary:hover {
     background-color: var(--erp-sky-500);
     border: var(--erp-sky-500);
 
 }
 
-.btn-primary:hover {
+.btn_primary:hover {
     background-color: var(--erp-sky-500);
 }
 
