--- a/src/assets/css/common/Card.css
+++ b/src/assets/css/common/Card.css
@@ -10,42 +10,51 @@ body {
 .card-body .dollar {
     font-size: var(--erp-fs-22);
 }
-.Totalearning{
-    transition:all 0.3s linear;
-      
- }
- .Totalearning:hover{
-     transform: translateY(-7px);
-     box-shadow: 0px 5px 0px 5px solid grey;
- }
- .orders{
- 
-     transition:all 0.3s linear;
-       
-  }
-  .orders:hover{
-      transform: translateY(-7px);
-  }
-  .customers{
- 
-     transition:all 0.3s linear;
-       
-  }
-  .customers:hover{
-      transform: translateY(-7px);
-  }
-  .my-balance{
- 
-     transition:all 0.3s linear;
-       
-  }
-  .my-balance:hover{
-      transform: translateY(-7px);
-  }
-  
-.card-link{
-    color: var( --erp-blue-color);
+
+.Totalearning {
+    transition: all 0.3s linear;
+
 }
+
+.Totalearning:hover {
+    transform: translateY(-7px);
+    box-shadow: 0px 5px 0px 5px solid grey;
+}
+
+.orders {
+
+    transition: all 0.3s linear;
+
+}
+
+.orders:hover {
+    transform: translateY(-7px);
+}
+
+.customers {
+
+    transition: all 0.3s linear;
+
+}
+
+.customers:hover {
+    transform: translateY(-7px);
+}
+
+.my-balance {
+
+    transition: all 0.3s linear;
+
+}
+
+.my-balance:hover {
+    transform: translateY(-7px);
+}
+
+.card-link {
+    color: var(--erp-blue-color);
+}
+
 .card-body {
     font-family: Poppins, sans-serif;
     ;
@@ -100,6 +109,9 @@ body {
     font-family: Poppins, sans-serif;
     ;
 }
+.fs-16{
+    font-size: var(--erp-fs-16)
+}
 
 .card-imgs {
     width: 50px;
@@ -115,6 +127,9 @@ body {
     color: var(--erp-text-mute);
 }
 
-.bookmark-icon  {
+.bookmark-icon {
     width: 12px;
+}
+.fs-s{
+    font-size: var(--erp-fs-s);
 }
