--- a/src/assets/css/common/Page.css
+++ b/src/assets/css/common/Page.css
@@ -29,7 +29,7 @@
     font-size: 13px;
     color: var(--erp-white-color);
     text-align: center;
-    line-height: 20px;
+    line-height: var(--erp-xl-lh);
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
     width: 100px;
@@ -111,4 +111,16 @@
 
 .nav-link.active {
     border-bottom: none;
+}
+.bg_light{
+    background-color: var(--erp-white-color);
+}
+.btn_success {
+    background-color: var(--erp-success-color) !important;
+    border-color: var(--erp-success-color) !important;
+    color: var(--erp-white-color)
+}
+.fs-12 {
+    font-size: var(--erp-fs-s);
+  
 }
